--- a/index.html
+++ b/index.html
@@ -1,99 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Padding and Margin</title>
-    <link rel="stylesheet" href="style.css">
-   
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <style>
+    
+    div{
+      background-color: #3939ff;
+      text-align: center;
+      padding: 10px;
+      margin: 20px;
+      padding:30px;
+      width:500px;
+    }
+
+    #rounded-all{
+      border:10px solid red;
+      border-radius: 50%;
+    }
+
+
+    #rounded-two{
+      border:10px solid red;
+      border-top-left-radius: 50px;
+      border-bottom-right-radius: 50px;
+    }
+  </style>
 </head>
 <body>
-    <div>
-        <p>Padding</p>
-        <p>Padding</p>
-        <p style="padding-top:100px">Padding Top</p>
-        <p>Padding</p>
+  <!-- Border-TOp -->
+  <div style="border-top:10px solid red">
+    <h2>Border Top</h2>
+  </div>
+
+
+    <!-- Border-Right -->
+    <div style="border-right:10px solid rgb(255, 0, 183)">
+      <h2>Border Right</h2>
     </div>
 
-    dy>
-    <div>
-        <p>Padding</p>
-        <p>Padding</p>
-        <p style="padding-right:300px">Padding Right</p>
-        <p>Padding</p>
-    </div>
+      <!-- Border-Bootom -->
+  <div style="border-bottom:10px solid rgb(0, 255, 132)">
+    <h2>Border Bottom</h2>
+  </div>
 
-    <div>
-        <p>Padding</p>
-        <p>Padding</p>
-        <p style="padding-left:200px">Padding Left</p>
-        <p>Padding</p>
-    </div>
+  <div style="border-left:10px solid rgb(56, 28, 60)">
+    <h2>Border Bottom</h2>
+  </div>
 
-    <div>
-        <p>Padding</p>
-        <p>Padding</p>
-        <p style="padding-bottom:100px">Padding Bottom</p>
-        <p>Padding</p>
-    </div>
+  <div style="border:5px solid rgb(5, 24, 15)">
+    <h2>Border Bottom</h2>
+  </div>
 
-    <div>
-        <p>Padding</p>
-        <p>Padding</p>
-        <p style="padding:200px">Padding All Sides</p>
-        <p>Padding</p>
-    </div>
+  <!-- ROund Border all sides -->
+  <div id="rounded-all">
+    <h2>Rounded All</h2>
+  </div>
 
-
-    <div>
-        <p>Margin</p>
-        <p>Margin</p>
-        <p style="margin-top:100px">Margin Top</p>
-        <p>Margin</p>
-    </div>
-
-   
-    <div>
-        <p>Margin</p>
-        <p>Margin</p>
-        <p style="Margin-right:300px">Margin Right</p>
-        <p>Margin</p>
-    </div>
-
-    <div>
-        <p>Margin</p>
-        <p>Margin</p>
-        <p style="margin-left:200px">Margin Left</p>
-        <p>Margin</p>
-    </div>
-
-    <div>
-        <p>Margin</p>
-        <p>Margin</p>
-        <p style="margin-bottom:100px">Margin Bottom</p>
-        <p>Margin</p>
-    </div>
-
-    <div>
-        <p>Margin</p>
-        <p>Margin</p>
-        <p style="margin:100px">Margin All Sides</p>
-        <p>Margin</p>
-    </div>
-
-
-<div>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam tenetur repellat cum, et nobis architecto, quae velit inventore voluptatibus molestiae rerum error facere minus quidem at, ea assumenda adipisci recusandae?
-    Minus dolorem repellendus nostrum excepturi deserunt? Culpa quos itaque dolor at error aliquam iure minus aliquid quo veniam. Accusantium nostrum repudiandae quibusdam voluptates. Amet quis reiciendis repudiandae optio quod voluptas!
-    Dignissimos recusandae ex culpa ad, sint accusamus vitae maiores sed temporibus quibusdam neque repellendus distinctio ullam. Fugit iste at harum doloremque optio soluta voluptates tempore itaque aliquid, iusto quaerat reiciendis?
-    Voluptatibus eveniet laboriosam illum porro iusto voluptatum! Delectus recusandae reprehenderit praesentium harum voluptate. Nostrum repellat fugit architecto quis, quod amet consequatur harum incidunt minima? Fugit eligendi impedit eveniet similique voluptatibus!
-    Hic accusamus rem deserunt fugit! Maxime vero facilis cumque similique laudantium molestias quos ipsum aliquid, est repudiandae suscipit sint voluptatem explicabo vitae quia, porro hic a rerum neque. Molestiae, numquam.
-    Ipsam molestias adipisci rem deleniti in ad expedita, optio quam nobis modi recusandae doloribus corrupti ea quasi exercitationem. Aspernatur, repellendus iusto illo illum itaque ut placeat officia voluptatem mollitia inventore.
-    Commodi suscipit, eum beatae earum, cupiditate, voluptas at aut debitis quas et consequatur! Neque, voluptas illum debitis provident quasi porro harum dolores! Expedita in dolorum eveniet, labore officia ex illo!
-    Minus ea enim deleniti quis facilis natus, excepturi doloribus, odit animi eligendi inventore consequuntur sint tenetur quam nihil! Recusandae magni reprehenderit velit blanditiis nisi. Ipsa id quos sunt voluptatem alias!
-    Consequuntur quos provident veniam itaque molestias alias minus dolores. Voluptas consectetur veritatis quod, maxime, obcaecati beatae sapiente perspiciatis laudantium assumenda, sunt sequi temporibus fuga. Voluptate, temporibus non! Ipsum, minima unde.
-    Eaque earum sapiente assumenda eos deserunt, quos molestiae ratione nam suscipit illo debitis sit aliquid recusandae praesentium quibusdam consequatur porro magni magnam voluptatibus soluta eius accusantium animi tempora! Expedita, minus?</p>
-</div>
+  <!-- Round-2 sides -->
+  <div id="rounded-two">
+    <h2>Rounded Two</h2>
+  </div>
+  
 </body>
 </html>
