--- a/index.html
+++ b/index.html
@@ -5,64 +5,24 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <style>
-    
-    div{
-      background-color: #3939ff;
-      text-align: center;
-      padding: 10px;
-      margin: 20px;
-      padding:30px;
-      width:500px;
-    }
-
-    #rounded-all{
-      border:10px solid red;
-      border-radius: 50%;
-    }
-
-
-    #rounded-two{
-      border:10px solid red;
-      border-top-left-radius: 50px;
-      border-bottom-right-radius: 50px;
-    }
-  </style>
+ <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Border-TOp -->
-  <div style="border-top:10px solid red">
-    <h2>Border Top</h2>
+ <div class="links-container horizontal-menu">
+   <a class="link-active" href="#">Home</a>
+   <a href="#">About</a>'
+   <a href="#">Products</a>
+   <a href="#">Services</a>
+   <a href="#">Contact</a>
   </div>
 
 
-    <!-- Border-Right -->
-    <div style="border-right:10px solid rgb(255, 0, 183)">
-      <h2>Border Right</h2>
-    </div>
-
-      <!-- Border-Bootom -->
-  <div style="border-bottom:10px solid rgb(0, 255, 132)">
-    <h2>Border Bottom</h2>
-  </div>
-
-  <div style="border-left:10px solid rgb(56, 28, 60)">
-    <h2>Border Bottom</h2>
-  </div>
-
-  <div style="border:5px solid rgb(5, 24, 15)">
-    <h2>Border Bottom</h2>
-  </div>
-
-  <!-- ROund Border all sides -->
-  <div id="rounded-all">
-    <h2>Rounded All</h2>
-  </div>
-
-  <!-- Round-2 sides -->
-  <div id="rounded-two">
-    <h2>Rounded Two</h2>
-  </div>
-  
+  <div class="links-container vertical-menu">
+    <a class="link-active" href="#">Home</a>
+    <a href="#">About</a>'
+    <a href="#">Products</a>
+    <a href="#">Services</a>
+    <a href="#">Contact</a>
+   </div>
 </body>
 </html>
